--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "hapi": "^8.4.0",
-    "nodemon": "^1.18.3"
+    "nodemon": "^1.18.3",
+    "uuid": "3.3.2"
   }
 }
