--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Joshua Barnett",
   "license": "ISC",
   "dependencies": {
+    "handlebars": "4.0.11",
     "hapi": "^8.4.0",
     "nodemon": "^1.18.3",
     "uuid": "3.3.2"
