--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "handlebars": "4.0.11",
     "hapi": "^8.4.0",
+    "joi": "6.4.2",
     "nodemon": "^1.18.3",
     "uuid": "3.3.2"
   }
