--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Joshua Barnett",
   "license": "ISC",
   "dependencies": {
+    "boom": "7.2.0",
     "handlebars": "4.0.11",
     "hapi": "^8.4.0",
     "joi": "6.4.2",
