--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "author": "Joshua Barnett",
   "license": "ISC",
   "dependencies": {
-    "boom": "7.2.0",
-    "handlebars": "4.0.11",
+    "boom": "^2.7.2",
+    "good": "^6.1.3",
+    "good-file": "^5.0.0",
+    "handlebars": "^3.0.3",
     "hapi": "^8.4.0",
-    "joi": "6.4.2",
-    "nodemon": "^1.18.3",
-    "uuid": "3.3.2"
+    "joi": "^6.4.2",
+    "uuid": "^2.0.1"
   }
 }
